themes/main/src/sass/_helpers/fonts.scss
/* ... */
@mixin columnists {
  .page-name {
    font: bold $page-name-size $family-sans;
    text-transform: uppercase;
    color: $page-title-color;
  }

  .title {
    font: bold #{$list-title-size} / #{$line-separation-small} $family-serif;
  }

  .description {
    font: normal #{$text-size} / #{$line-separation-small} $family-sans;
  }

  .date {
    font: $details-size $family-sans;
    color: $details-color;
  }

  .name {
    font: bold #{$title-size} / #{$line-separation-small} $family-sans;
    color: $columnist-name-color;
  }

  a:hover {
    .name {
      color: $link-hover-color;
    }
  }

  .pagination-title {
    font: bold $page-name-size $family-sans;
    text-transform: uppercase;
    color: $page-title-color;
  }

  .button {
    font: bold #{$text-size} / #{$line-separation-small} $family-sans;
    color: $link-neutral-color;

    &:visited {
      color: $link-neutral-color-visited;
    }

    &:hover {
      color: $link-neutral-color-hover;
    }
  }

  .button-selected {
    font: bold #{$text-size} / #{$line-separation-small} $family-sans;
    color: $link-color;

    &:visited {
      color: $link-color;
    }

    &:hover {
      color: $link-color;
    }
  }
}

@mixin post {
  .hat {
    font: bold $page-name-size $family-sans;
    text-transform: uppercase;
    color: $page-title-color;
  }

  .title {
    font: bold #{$standalone-title-size} / #{$line-separation-small} $family-serif;
    color: $title-color;
  }

  .description {
    font: #{$standalone-description-size} / #{$line-separation-small} $family-sans;
    color: $title-color;
  }

  .author,
  .listen-audio {
    font: $text-size $family-serif;
    color: $title-color;
  }

  .place,
  time,
  figcaption,
  .ckeditor-img-caption {
    font: $text-size $family-serif;
    color: $details-color;
  }

  .ckeditor-subtitle {
    font: bold 1.21rem $family-serif;
    color: $text-color;
    text-align: center;

    @include media-query (THREE) {
      font-size: 1.5rem;
    }
  }

  .ckeditor-info-subtitle {
    text-decoration: underline;
    margin-bottom: 6px;

    @include media-query (THREE) {
      margin-bottom: 8px;
    }
  }

  .ckeditor-info-highlight {
    color: $red-base;
  }

  .tabloid-link-text {
    font: $text-size $family-serif;
    color: $details-color;

    @include media-query (THREE) {
      font-size: $details-size;
    }
    @include media-query (FOUR) {
      font-size: $text-size;
    }
  }

  a {
    color: $link-color;
    font-weight: bold;

    &:visited {
      color: $link-visited-color;
    }

    &:hover {
      color: $link-hover-color;
    }
  }

  p {
    color: $text-color;
  }

  .image-subtitle {
    font: bold $details-size $family-sans;
    color: $text-color;
  }

  .share-title {
    font: bold $page-name-size $family-sans;
    text-transform: uppercase;
    color: $page-title-color;
    text-align: left;
  }

  .details-bar .share-title {
    text-align: right;
  }

  .share-icon {
    color: $link-neutral-color;

    &:visited {
      color: $link-neutral-color-visited;
    }

    &:hover {
      color: $link-neutral-color-hover;
    }
  }

  .button {
    font: bold $text-size $family-sans;
    color: $link-color;

    @include media-query (THREE) {
      font-size: $details-size;
    }
    @include media-query (FOUR) {
      font-size: $text-size;
    }

    &:visited {
      color: $link-visited-color;
    }

    &:hover {
      color: $link-hover-color;
    }
  }
}

@mixin audio-player  {
  .progress-bar {
    span {
      font: normal #{$audio-info-size} / #{$line-separation-small} $family-sans;
    }
  }

  .download-description {
    font: bold #{$details-size} / #{$line-separation-small} $family-sans;
    color: $download-link;
  }
}

@mixin column {
  .hat {
    font: bold $page-name-size $family-sans;
    text-transform: uppercase;
    color: $page-title-color;
  }

  .title {
    font: bold #{$standalone-title-size} / #{$line-separation-small} $family-serif;
    color: $title-color;
  }

  time,
  figcaption {
    font: $text-size $family-serif;
    color: $details-color;
  }

  a {
    color: $link-color;
    font-weight: bold;

    &:visited {
      color: $link-visited-color;
    }

    &:hover {
      color: $link-hover-color;
    }
  }

  .name {
    font: bold #{$text-size} / #{$line-separation-small} $family-sans;
    color: $columnist-name-color;
  }

  p {
    color: $text-color;
  }

  .ckeditor-subtitle {
    font: bold 1.21rem $family-serif;
    color: $text-color;
    text-align: center;

    @include media-query (THREE) {
      font-size: 1.5rem;
    }
  }

  .ckeditor-info-subtitle {
    text-decoration: underline;
  }

  .ckeditor-info-highlight {
    color: $red-base;
  }
}

@mixin institutional {
  .page-name {
    font: bold $page-name-size $family-sans;
    text-transform: uppercase;
    color: $page-title-color;
  }

  .title {
    font: bold $text-size $family-sans;
    text-transform: uppercase;
    color: $text-color;
  }

  .list {
    font: #{$standalone-text-size} / #{$line-separation-big} $family-serif;
    color: $text-color;

    dt {
      font-weight: bold;
    }
  }

  a {
    color: $link-color;
    font-weight: bold;

    &:visited {
      color: $link-visited-color;
    }

    &:hover {
      color: $link-hover-color;
    }
  }

  .text {
    font: bold $details-size $family-sans;

    @include media-query(THREE) {
      font-size: $text-size;
    }
  }

  p {
    color: $text-color;
  }
}
/* ... */

